# recipebox-1

./: .gitignore  db.sqlite3  pyproject.toml
recipe/: admin.py  forms.py  models.py  views.py
recipe/migrations/: 0001_initial.py  0002_auto_20200910_1432.py
recipebox/: settings.py  urls.py
recipebox.egg-info/: PKG-INFO
templates/: author_detail.html  favorites.html  generic_view.html  index.html  recipe_detail.html
