[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "Recipebox V1 Assessment"
authors = ["Chris Warren <chris@chriswarren.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
