[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "Recipebox Assessment"
authors = ["Chris Warren a Kenzie Academy Software Engineering Student"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
